tests/my/good/good001.lat
int main() {
  return 0;
}

void f() {return;}
void g() {return;}
