tests/my/bad/bad001.lat
int main() {
  return 0;
}

void f() {return;}
void f() {return;}
